--- a/app/assets/stylesheets/app/application/base.css.scss
+++ b/app/assets/stylesheets/app/application/base.css.scss
@@ -410,6 +410,7 @@ ul#navbar-right-links {
       height: 22px;
       width: 22px;
       @include border-radius(3px);
+      overflow: hidden; // for when the image is not found
 
       img.logo-user {
         height: 22px;
@@ -485,6 +486,8 @@ ul#navbar-right-links {
       height: 64px;
       width: 64px;
       @include border-radius(3px);
+      overflow: hidden; // for when the image is not found
+
       img.logo-user {
         height: 64px;
         width: 64px;
@@ -558,7 +561,10 @@ ul#navbar-right-links {
     float: left;
     border: 1px #ccc solid;
     padding: 1px;
+    width: 84px;
     height: 64px;
+    overflow: hidden; // for when the image is not found
+
     &.clean { border: 0; }
 
     // default size for spaces logos
